--- a/deno.json
+++ b/deno.json
@@ -1,4 +1,8 @@
 {
+    "name": "@booringsoftware/gallimimus",
+    "version": "0.1.0",
+    "license": "MIT",
+    "exports": "./mod.ts",
     "imports": {},
     "compilerOptions": {
         "experimentalDecorators": true,
